Dictionary learning pipeline added
This includes...
+a parsing scripts that only filter labels by image quality and to a much
more agressive degree as the source of input to dict.py
+overhaul and test of dict.py to be completely compatible with the
cluster
+refactoring relevant utilities so both model.py and dict.py parse
filter specifications the same way

--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,8 @@ fake_deps.txt
 whales
 whales/**/*
 
-# Project ignores
-.condor_jobs/**/*
-run_model.sh
+# cluster ignores
+**/.condor_jobs/**/*
+job_startup_scripts/**/*
+pretrained_kernels/**/*
+
